fix: 修改threadList路由
